samplenodeproject/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: nodeapp
          image: nodeapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: nodeapp           # <-- fixed to match deployment label
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30036
