samplenodeproject/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  type: NodePort
  selector:
    app: nodeapp
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007  # Accessible via minikubeIP:30007
