samplenodeproject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nodeapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp-service
                port:
                  number: 5000
